--- a/BlankScreen/App.config
+++ b/BlankScreen/App.config
@@ -16,6 +16,12 @@
             <setting name="ScreenIndex" serializeAs="String">
                 <value>-1</value>
             </setting>
+            <setting name="WindowLocation" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="WindowSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
         </BlankScreen.Settings1>
     </userSettings>
 </configuration>
