--- a/BlankScreen/BlankScreen.csproj
+++ b/BlankScreen/BlankScreen.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="FormCursorAutoHide.cs" />
+    <Compile Include="FormMenu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings1.Designer.cs">
